--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,21 @@
 @charset "UTF-8";
 
+body,
 html {
+    z-index: 1;
+    position: relative;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
     text-align: center;
 }
 
-body {
+.main-container {
     width: 600px;
     margin: 0 auto;
+    border: 1px solid #fff;
     text-align: left;
 }
 
@@ -25,6 +34,48 @@ pre {
 /* ----------------------------------------------------------
   Forms
 ---------------------------------------------------------- */
+
+/* Overlay upload */
+
+.img-form-wrap,
+.img-form-wrap img {
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+
+.img-form-wrap {
+    display: none;
+    opacity: 1;
+    background-color: #fff;
+}
+
+.img-form-wrap img {
+    opacity: 0.50;
+}
+
+/* Img wrapper */
+
+body[data-dragging="1"] #img2-file {
+    z-index: 3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.99;
+}
+
+body[data-dragging="1"] .img-form-wrap {
+    display: block;
+    margin: 10px;
+    outline: 3px dashed #369;
+    box-shadow: 0 0 0 10px #FFF;
+}
+
+/* Form items */
 
 fieldset {
     margin-bottom: 10px;
@@ -82,18 +133,35 @@ textarea:focus {
     margin: 0 0 5px;
 }
 
-.demo-img,
+.demo-img-wrapper,
 .demo-content {
     display: inline-block;
     vertical-align: top;
 }
 
-.demo-img {
+.demo-img-wrapper {
+    z-index: 1;
+    position: relative;
     width: 64px;
     height: 64px;
     margin-right: 10px;
     border: 1px solid #ccc;
-    background: #cccccc no-repeat center center;
+    background-color: #eee;
+    background-image: linear-gradient(45deg, #CCC 25%, transparent 25%, transparent 75%, #CCC 75%, #CCC), linear-gradient(45deg, #CCC 25%, transparent 25%, transparent 75%, #CCC 75%, #CCC);
+    background-position: 0 0,10px 10px;
+    background-size: 20px 20px;
+}
+
+.demo-img {
+    display: block;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    background: transparent no-repeat center center;
     -webkit-background-size: contain;
     background-size: contain;
 }
